feat: Add checkAccountPassword route
